<resources>
    <string name="app_name">Inventario</string>
    <string name="usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="button_clientes">Clientes</string>
    <string name="button_productos">Productos</string>
    <string name="button_ventas">Vebtas</string>
    <string name="button_Insertar">Insertar</string>
    <string name="button_Modificar">Modificar</string>
    <string name="button_Consultar">Consultar</string>
    <string name="txt_codigo">Código</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_descripcion">Descripción</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="button_eliminar">Eliminar</string>

</resources>
