<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ClientesConsultar">

    <EditText
        android:id="@+id/et_codigo_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/txt_codigo"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="224dp"
        android:layout_height="65dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="64dp"
        android:hint="@string/txt_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_codigo_c" />

    <TextView
        android:id="@+id/tv_direccion"
        android:layout_width="225dp"
        android:layout_height="58dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:hint="@string/txt_direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="224dp"
        android:layout_height="45dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:hint="@string/txt_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_direccion" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/style_border_button_clientes"
        android:onClick="Consultar"
        android:text="@string/button_Consultar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_telefono" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_eliminar"
        android:background="@drawable/style_border_button_clientes"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/tv_telefono" />
</androidx.constraintlayout.widget.ConstraintLayout>