<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b2831"
    tools:context=".Menu" >

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="241dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="244dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_productos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border_button"
            android:onClick="productos"
            android:text="@string/button_productos"
            tools:ignore="TextContrastCheck"
            />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:background="#1b2831" />

        <Button
            android:id="@+id/button_clientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border_button"
            android:onClick="clientes"
            android:text="@string/button_clientes"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,UsingOnClickInXml" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:background="#1b2831" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border_button"
            android:text="@string/button_ventas"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>