<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b2831"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="167dp"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border_text"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/white" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:color="#1b2831" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border_text"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/white" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:color="#1b2831" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border_button"
            android:onClick="Login"
            android:text="@string/btn_Ingresar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>